# regex-prompt

./: .gitignore  LICENSE  README.md  empty_prompt.txt  eval_on_test.py  example.json  example1.json  plot_results.py  prompt.txt  pyproject.toml  regex_claude_test.py  regex_pipe.py  regex_test.py  requirements.txt  run.py  run_lel.py  simple_or.py
data/gpt-2-small/: eval.jsonl  train.jsonl  val.jsonl
data/gpt-2-small/examples/: train.jsonl
evaluate_regex/: regex_eval.py
feature_datasets/: README.md  make_dataset.py  piviot_dataset.py
generate_feature/: generate_feature.py
generate_feature_dataset/: README.md  make_dataset.py
regex_methods/: empty_prompt.txt  regex_pipe.py  regex_test.py  simple_or.py
regex_methods/llms_exp_llms/: empty_prompt.txt  eval_prompt.txt  evaluation.py  inference.py  interfacing.py  prompt.txt
regin/: datatypes.py
regin/datasets/: README.md  generate.py  pivot.py
regin/eval/: README.md  __main__.py  evaluation_methods.py  matchers.py  regex_eval.py  regex_pass_k.py
regin/evaluate_regex/: README.md  __main__.py  regex_eval.py
regin/feature_datasets/: datatypes.py
