[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "regin"
description = ""
requires-python = ">=3.10"
license = {text = "MIT License"}
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "certifi==2024.8.30",
    "distro==1.9.0",
    "groq==0.13.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.0",
    "idna==3.10",
    "pydantic==2.10.2",
    "pydantic_core==2.27.1",
    "sniffio==1.3.1",
    "tqdm==4.67.1",
    "typing_extensions==4.12.2",
]
version = "0.0.1"

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pre-commit",
    "pytest",
]


[tool.setuptools.packages.find]
include = ['regin*']

[tool.ruff]
select = ["E", "F", "D", "I"]
ignore = ["D102", "D103", "D100", "D101"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
